chore: stop overwriting folders config and only emit media.json

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
     <header class="topbar">
       <h1>Drive Media Gallery</h1>
-      <p>Photos & videos served from a public Google Drive folder.</p>
+      <p>Photos & videos served from public Google Drive folders.</p>
     </header>
 
     <main>
+      <div id="folders" class="folders"></div>
       <section id="grid" class="grid" aria-live="polite"></section>
       <div id="status" class="status">Loading media...</div>
     </main>
